0.3.2 Fixed: Popup taller than screen on mobile in some instances.

--- a/assets/css/mai-popups.css
+++ b/assets/css/mai-popups.css
@@ -10,9 +10,10 @@
 	right: var(--mai-popup-spacing);
 	bottom: var(--mai-popup-spacing);
 	left: var(--mai-popup-spacing);
-	z-index: 9999;
+	z-index: 99999;
 	width: calc(100% - (var(--mai-popup-spacing) * 2));
 	max-width: var(--mai-popup-max-width, 100%);
+	max-height: calc(100vh - (var(--mai-popup-spacing) * 2));
 	margin: var(--mai-popup-margin, auto);
 	padding: var(--mai-popup-padding, 0);
 	overflow-x: hidden;
@@ -107,7 +108,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 999;
+	z-index: 99998;
 	width: 100%;
 	height: 100%;
 	background: var(--mai-popup-overlay-background, rgba(0, 0, 0, 0.75));
